# System

./: .coveralls.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  travis.sh
Sockets/Sockets.xcodeproj/: project.pbxproj
Sockets/Sockets.xcodeproj/project.xcworkspace/xcuserdata/tigran.xcuserdatad/: UserInterfaceState.xcuserstate
Sockets/Sockets.xcodeproj/xcuserdata/tigran.xcuserdatad/xcschemes/: Sockets.xcscheme  client.xcscheme  server.xcscheme  xcschememanagement.plist
Sockets/client/: main.cpp
Sockets/dbg/: dbg.cpp  dbg.hpp
Sockets/server/: main.cpp
Sockets/tsocket/: tsocket.cpp  tsocket.hpp
application/: CMakeLists.txt
application/opencv_app/src/: main.cpp  src.cmake
application/opencv_app/tst/: CMakeLists.txt  main.cpp
cmake/: core.cmake  gtest.cmake
doc/: System.eap  eclipse_config.xml
platform/: CMakeLists.txt
platform/cmake/: core.cmake
platform/cmake/ref/: BuildUtils.cmake  compilerDefOpt.cmake
platform/dbg/: CMakeLists.txt
platform/dbg/inc/: dbg.hpp
platform/dbg/src/: CMakeLists.txt  dbg.hpp  src.cmake
platform/dbg/tst/: CMakeLists.txt  main.cpp
platform/file/inc/: file.hpp  file_mode.h  file_mode.hpp  file_types.h  file_types.hpp  path.h  path.hpp
platform/file/src/: file.cpp  file_mode.cpp  file_types.cpp  path.cpp  src.cmake
platform/file/tst/: CMakeLists.txt  file_mode_test.cpp  file_mode_unittest.hpp  file_test.cpp  file_types_test.cpp  file_types_unittest.hpp  file_unittest.hpp  main.cpp  path_test.cpp  path_unittest.hpp
platform/logger/inc/: logger.hpp
platform/logger/src/: logger.cpp  src.cmake
platform/logger/tst/: CMakeLists.txt  logger_test.cpp
platform/mutex/inc/: mutex.hpp
platform/mutex/src/: mutex.cpp  src.cmake
platform/mutex/tst/: CMakeLists.txt  mutex_test.cpp
platform/semaphore/inc/: semaphore.hpp
platform/semaphore/src/: semaphore.cpp  src.cmake
platform/semaphore/tst/: CMakeLists.txt  semaphore_test.cpp
platform/socket/: CMakeLists.txt
platform/socket/inc/: socket.hpp  socket_server.hpp
platform/socket/src/: CMakeLists.txt  socket.cpp  socket.hpp  socket_server.cpp  socket_server.hpp  src.cmake  tsocket.cpp
platform/socket/test/: CMakeLists.txt
platform/socket/test/client/: CMakeLists.txt  main.cpp
platform/socket/test/server/: main.cpp
platform/socket/tst/: CMakeLists.txt  main.cpp
platform/socket/tst/client/: CMakeLists.txt  main.cpp
platform/socket/tst/server/: CMakeLists.txt  main.cpp
platform/thread/inc/: thread.hpp
platform/thread/src/: src.cmake  thread.cpp  thread.hpp
platform/thread/test/: thread_test.cpp
platform/thread/tst/: CMakeLists.txt  thread_test.cpp
platform/time/inc/: time.hpp
platform/time/src/: src.cmake  time.cpp
platform/time/tst/: CMakeLists.txt  time_test.cpp
platform/type_cast/inc/: type_cast.hpp
platform/type_cast/src/: src.cmake  type_cast.cpp
platform/type_cast/tst/: CMakeLists.txt  type_cast_test.cpp
server/: server.cpp
test/client/: main.cpp
test/server/: main.cpp
tsocket/: tsocket.cpp  tsocket.hpp
